techtalk/base/namespace_techtalk.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: techtalk
spec: {}
status: {}
