techtalk/base/deployment_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: techtalk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/nginxinc/nginx-unprivileged:1.29.0
          ports:
            - containerPort: 8080
          command:
            - /bin/sh
            - -c
            - |
              envsubst < /config/index.html.template > /usr/share/nginx/html/index.html
              exec nginx -g "daemon off;"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: webroot
              mountPath: /usr/share/nginx/html
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: config
          configMap:
            name: nginx-content
        - name: webroot
          emptyDir: {}
