techtalk/base/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: techtalk
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
