techtalk/base/route_nginx.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: techtalk
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: http
  tls:
    termination: edge
